tests/compile/fail/trait_bounds.stderr
error[E0277]: the trait bound `(dyn NonDyntableTrait + 'static): VTableRepr` is not satisfied
  --> tests/compile/fail/trait_bounds.rs:18:1
   |
18 | #[dyntable]
   | ^^^^^^^^^^^ the trait `VTableRepr` is not implemented for `(dyn NonDyntableTrait + 'static)`
   |
   = help: the following other types implement trait `VTableRepr`:
             (dyn DynBoundWithoutClause + 'static)
             (dyn DynBoundWithoutClause + Send + 'static)
             (dyn DynBoundWithoutClause + Send + Sync + 'static)
             (dyn DynBoundWithoutClause + Sync + 'static)
             (dyn DyntableTrait + 'static)
             (dyn DyntableTrait + Send + 'static)
             (dyn DyntableTrait + Send + Sync + 'static)
             (dyn DyntableTrait + Sync + 'static)
           and $N others
   = note: this error originates in the attribute macro `dyntable` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `__AsDyn: NonDyntableTrait` is not satisfied
  --> tests/compile/fail/trait_bounds.rs:19:7
   |
19 | trait NonDynBoundWithClause: NonDyntableTrait
   |       ^^^^^^^^^^^^^^^^^^^^^ the trait `NonDyntableTrait` is not implemented for `__AsDyn`
   |
note: required by a bound in `NonDynBoundWithClause`
  --> tests/compile/fail/trait_bounds.rs:19:30
   |
19 | trait NonDynBoundWithClause: NonDyntableTrait
   |                              ^^^^^^^^^^^^^^^^ required by this bound in `NonDynBoundWithClause`
help: consider further restricting type parameter `__AsDyn`
   |
18 | #[dyntable], __AsDyn: NonDyntableTrait
   |            +++++++++++++++++++++++++++

error[E0277]: the trait bound `__AsDyn: AsDyn<(dyn RequiredTrait + 'static)>` is not satisfied
  --> tests/compile/fail/trait_bounds.rs:47:7
   |
47 | trait MissingExplicitBoundInheritance: ImplementedTrait
   |       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `AsDyn<(dyn RequiredTrait + 'static)>` is not implemented for `__AsDyn`
   |
note: required for `__AsDyn` to implement `ImplementedTrait`
  --> tests/compile/fail/trait_bounds.rs:38:1
   |
38 | #[dyntable]
   | ^^^^^^^^^^^
39 | trait ImplementedTrait: RequiredTrait
   |       ^^^^^^^^^^^^^^^^
note: required by a bound in `MissingExplicitBoundInheritance`
  --> tests/compile/fail/trait_bounds.rs:47:40
   |
47 | trait MissingExplicitBoundInheritance: ImplementedTrait
   |                                        ^^^^^^^^^^^^^^^^ required by this bound in `MissingExplicitBoundInheritance`
   = note: this error originates in the attribute macro `dyntable` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider further restricting type parameter `__AsDyn`
   |
46 | #[dyntable], __AsDyn: dyntable::AsDyn<(dyn RequiredTrait + 'static)>
   |            +++++++++++++++++++++++++++++++++++++++++++++++++++++++++

error[E0277]: the trait bound `<__DynRepr as VTableRepr>::VTable: SubTable<RequiredTraitVTable>` is not satisfied
  --> tests/compile/fail/trait_bounds.rs:47:7
   |
47 | trait MissingExplicitBoundInheritance: ImplementedTrait
   |       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `SubTable<RequiredTraitVTable>` is not implemented for `<__DynRepr as VTableRepr>::VTable`
   |
note: required for `__AsDyn` to implement `ImplementedTrait`
  --> tests/compile/fail/trait_bounds.rs:38:1
   |
38 | #[dyntable]
   | ^^^^^^^^^^^
39 | trait ImplementedTrait: RequiredTrait
   |       ^^^^^^^^^^^^^^^^
note: required by a bound in `MissingExplicitBoundInheritance`
  --> tests/compile/fail/trait_bounds.rs:47:40
   |
47 | trait MissingExplicitBoundInheritance: ImplementedTrait
   |                                        ^^^^^^^^^^^^^^^^ required by this bound in `MissingExplicitBoundInheritance`
   = note: this error originates in the attribute macro `dyntable` (in Nightly builds, run with -Z macro-backtrace for more info)
